unpackaged/main/default/objects/Technical_Asset__c/Technical_Asset__c.object-meta.xml
<CustomObject>
    <label>Technical Asset</label>
    <nameField>
        <label>Technical Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technical Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>