unpackaged/main/default/objects/Technical_Asset__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Technical Assets</relationshipLabel>
    <relationshipName>Technical_Assets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>