unpackaged/main/default/objects/Technical_Asset__c/fields/Clean_URL__c.field-meta.xml
<CustomField>
    <fullName>Clean_URL__c</fullName>
    <label>Clean URL</label>
    <type>Url</type>
</CustomField>