unpackaged/main/default/objects/Technical_Asset__c/fields/Drive_Connect_URL__c.field-meta.xml
<CustomField>
    <fullName>Drive_Connect_URL__c</fullName>
    <formula>CASE(Format__c,
  &quot;Google Document&quot;,&quot;Link__c&quot;,
  &quot;Google Slides&quot;,&quot;Link__c&quot;,
  &quot;Google Sheet&quot;,&quot;Link__c&quot;,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Connect URL</label>
    <type>Text</type>
</CustomField>