unpackaged/main/default/objects/Technical_Asset__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Technical Assets</relationshipLabel>
    <relationshipName>Technical_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>