unpackaged/main/default/objects/Technical_Asset__c/fields/Submitted_By_Level__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Level__c</fullName>
    <label>Submitted By Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Level</valueSetName>
    </valueSet>
</CustomField>