unpackaged/main/default/objects/Technical_Asset__c/fields/Submitted_By_Team__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Team__c</fullName>
    <label>Submitted By Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Team</valueSetName>
    </valueSet>
</CustomField>