unpackaged/main/default/objects/Technical_Asset__c/fields/Submitted_By_With_Role__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_With_Role__c</fullName>
    <formula>Submitted_By__r.Full_Name_with_Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitted By (Role)</label>
    <type>Text</type>
</CustomField>