unpackaged/main/default/objects/Technical_Asset__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Submitted Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>