unpackaged/main/default/objects/Technical_Asset__c/fields/Technical_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Technical_Evaluation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Evaluation</label>
    <referenceTo>Technical_Evaluation__c</referenceTo>
    <relationshipLabel>Technical Assets</relationshipLabel>
    <relationshipName>Technical_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>