unpackaged/main/default/objects/Technical_Asset__c/validationRules/Submitted_By_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Submitted_By_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Submitted_By__c)</errorConditionFormula>
    <errorDisplayField>Submitted_By__c</errorDisplayField>
    <errorMessage>Submitted By required</errorMessage>
</ValidationRule>